--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 const pageTitle = "welcome to my blog";
+//import '../styles/global.css';
 ---
 <head> <title>{pageTitle}</title></head>
 <Layout title="Welcome to Astro.">
